Set transition delay to 0 when show more collapses to avoid transition hiccups

--- a/src/components/common/ShowMore/ShowMore.styles.css
+++ b/src/components/common/ShowMore/ShowMore.styles.css
@@ -46,6 +46,7 @@
 }
 
 .navds-show-more--closed .navds-show-more__content {
+  transition-duration: 0s;
   mask-image: var(--ac-show-more-mask);
   overflow: hidden;
 }
